# autocorrectProject

./: AutoCorrect.cpp  AutoCorrect.h  Backspace.cpp  Backspace.h  CMakeLists.txt  Cursor.cpp  Cursor.h  FileReader.cpp  FileReader.h  Font.cpp  Font.h  Heap.cpp  Heap.h  StateEnum.h  States.cpp  States.h  TextInput.cpp  TextInput.h  Word.cpp  Word.h  WordSort.cpp  WordSort.h  main.cpp
